# journal

./: README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: backTests.yml  ci.yml  docker-image.yml  python-package-conda.yml
.worklfows/: tester.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.text  requirements.txt
backend/app/: config.py  dependencies.py  main.py  schema.py
backend/app/routes/: auth.py  portfolio.py  post.py  stock.py  transaction.py  user.py
backend/app/services/: README.md  create_schema.sql  database.py  email_service.py  logger_config.py  mini_scarper.py  mock_data.sql  portfolio_simulator_backtesting.py
backend/app/tests/: test_database.py
backend/tests/: README.md  conftest.py  test_auth.py  test_database.py  test_portfolio.py  test_portfolio_and_transactions.py  test_stock.py  test_transaction.py  test_user.py  test_users.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  flatkrStyle.css  main.ts  style.css
frontend/src/assets/: colors.txt
frontend/src/components/: AddFunds.vue  AddTransaction.vue  AllocationDoughnout.vue  BackTesterHeader.vue  BalanceTransactionBox.vue  BuyStock.vue  CalendarComponent.vue  CompactCalendar.vue  CorrectBalanceTransaction.vue  CorrectStockTransaction.vue  CustomSelectDropDown.vue  DarkModeToggle.vue  DashboardHeader.vue  DataTable.vue  DropdownMenu.vue  Footer.vue  FundsHeader.vue  IconAlien.vue  IconCalendar.vue  IconColors.vue  (+32 more)
frontend/tests/: README.md  setup.ts
(+52 files in other folders)
