[tool.poetry]
name = "journal"
version = "0.1.0"
description = "MAnual Journal to sace trades and check statistics."
authors = ["x14119641 <daniel.gil.romero24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
